[project]
name = "lettuce_logger"
version = "0.1.0"
description = "Python logging utility with love and respect to the prime minister."
authors = [
  { name="Yoki"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
